[package]
name = "pine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/6-eyes/pine"
description = """
A simple app to store yout credentials locally
"""

[dependencies]
iced = { version = "0.12.1", features = ["debug", "advanced"] }
aes = "0.8.4"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
home = "0.5.9"
rand = "0.8.5"